# wthor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yaml  fuzz.yml  release.yaml  release.yml
examples/: README.md  extract_info.rs  serde.rs  wins_by_color.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: no_panic.rs  no_panic_game_archive.rs  no_panic_records.rs
spec/: README.md
src/: constants.rs  game_archive.rs  header.rs  infer.rs  lib.rs  name_file.rs  parse.rs  records.rs  wtb_file.rs  wthor.rs
src/parse/: constants.rs  header.rs  mod.rs  wthor.rs
tests/: no_panic.rs  wthor.rs
wthor-database/: WTHOR.JOU  WTHOR.TRN
