[package]
name = "wthor"
version = "0.5.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"
description = "Parser for WTHOR files"
repository = "https://github.com/LimeEng/wthor/"
license = "MIT"
keywords = ["othello", "reversi", "wthor"]
categories = ["encoding", "parser-implementations"]

exclude = [
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
encoding = "0.2"
