[package]
name = "wthor"
version = "0.5.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"
description = "Parser for WTHOR files"
repository = "https://github.com/LimeEng/wthor/"
license = "MIT"
keywords = ["othello", "reversi", "wthor"]
categories = ["encoding", "parser-implementations"]

exclude = [
    ".github/**",
    "wthor-database/*",
    "spec/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
encoding = "0.2"


[dev-dependencies]
serde_json = "1"
magpie = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
paste = "1.0"

[[example]]
name = "serde"
required-features = ["serde"]
